<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IAlarmActivity!</string>
    <string name="app_name">案例-时钟2</string>
    <string name="tab_one">世界时钟</string>
    <string name="tab_two">闹钟</string>
    <string name="tab_three">秒表</string>
    <string name="tab_four">计时器</string>
    <string name="text_num0">0</string>
    <string name="text_point">.</string>
    <string name="text_doublepoint">:</string>
    <string name="btn_ok">好</string>
    <string name="btn_sleep">小睡</string>

    <!--about alarm -->
	<string name="alarm_title">闹钟</string>
    <string name="alarm_edit">编辑 </string>
    <string name="alarm_editok">完成</string>
    <string name="alarm_add">添加闹钟</string>
    <string name="alarm_repeat">重复</string>
    <string name="alarm_sound">声音</string>
    <string name="alarm_sleep">小睡</string>
    <string name="alarm_tag">标签</string>
    <string name="alarm_pick_return">返回</string>
    <string name="alarm_addok">保存</string>
    <string name="alarm_add_error">闹铃已经存在！</string>
    
    <string name="alarm_days_0">永不</string>
    <string name="alarm_days_1">每周一</string>
    <string name="alarm_days_2">每周二</string>
    <string name="alarm_days_3">每周三</string>
    <string name="alarm_days_4">每周四</string>
    <string name="alarm_days_5">每周五</string>
    <string name="alarm_days_6">每周六</string>
    <string name="alarm_days_7">每周日</string>
    
    <string name="alarm_sound_null">/easyandroid/无.mp3</string>


    <!-- about stop wathc -->
    <string name="stopwatch_btn_start">启动</string>
    <string name="stopwatch_btn_stop">停止</string>
    <string name="stopwatch_btn_count">计次</string>
    <string name="stopwatch_btn_clear">复位</string>

    <!-- about world time-->
    <string name="worldtime_title">世界时钟</string>
    <string name="worldtime_edit">编辑</string>
    <string name="worldtime_editover">完成</string>
    <string name="worldtime_selectcity">搜索城市以添加到世界时钟上。</string>
    <string name="worldtime_cityexisted">城市已经存在！</string>
    <string name="worldtime_selectcity_cancle">取消</string>
    <string name="worldtime_delete">删除</string>
    <string name="worldtime_date_today">今天</string>
    <string name="worldtime_date_yestoday">昨天</string>
    <string name="worldtime_date_tomorrow">明天</string>
    <string name="Reykjavik">雷克雅未克</string>
    <string name="Casablanca">卡萨布兰卡</string>
    <string name="Lisbon">里斯本</string>
    <string name="Dublin">都柏林</string>
    <string name="London">伦敦</string>
    <string name="Lagos">拉各斯</string>
    <string name="Algiers">阿尔及尔</string>
    <string name="Madrid">马德里</string>
    <string name="Barcelona">巴塞罗纳</string>
    <string name="Paris">巴黎</string>
    <string name="Brussels">布鲁塞尔</string>
    <string name="Amsterdam">阿姆斯特丹</string>
    <string name="Geneva">日内瓦</string>
    <string name="Zurich">苏黎世</string>
    <string name="Frankfurt">法兰克福</string>
    <string name="Oslo">奥斯陆</string>
    <string name="Copenhagen">哥本哈根</string>
    <string name="Rome">罗马</string>
    <string name="Berlin">柏林</string>
    <string name="Prague">普拉亚</string>
    <string name="Zagreb">萨格勒布</string>
    <string name="Vienna">维也纳</string>
    <string name="Stockholm">斯德哥尔摩</string>
    <string name="Budapest">布达佩斯</string>
    <string name="Belgrade">贝尔格莱德</string>
    <string name="Warsaw">华沙</string>
    <string name="CapeTown">开普敦</string>
    <string name="Johannesburg">约翰内斯堡</string>
    <string name="Harare">哈拉雷</string>
    <string name="Sofia">索非亚</string>
    <string name="Athens">雅典</string>
    <string name="Tallinn">塔林</string>
    <string name="Helsinki">赫尔辛基</string>
    <string name="Bucharest">布加勒斯特</string>
    <string name="Minsk">明斯克</string>
    <string name="Istanbul">伊斯坦布尔</string>
    <string name="Kyiv">乌克兰基落</string>
    <string name="Odesa">敖德萨</string>
    <string name="Cairo">开罗</string>
    <string name="Ankara">安卡拉</string>
    <string name="Jerusalem">耶路撒冷</string>
    <string name="Beirut">贝鲁特</string>
    <string name="Amman">安曼</string>
    <string name="Khartoum">喀土穆</string>
    <string name="Nairobi">内罗毕</string>
    <string name="AddisAbaba">亚的斯亚贝巴</string>
    <string name="Aden">亚丁</string>
    <string name="Riyadh">利雅得</string>
    <string name="Antananarivo">塔那那利佛</string>
    <string name="Kuwaitcity">科威特城</string>
    <string name="Tehran">德黑兰</string>
    <string name="Moscow">莫斯科</string>
    <string name="Baghdad">巴格达</string>
    <string name="AbuDhabi">阿布扎比</string>
    <string name="Kabul">喀布尔</string>
    <string name="Karachi">卡拉奇</string>
    <string name="Tashkent">塔什干</string>
    <string name="Islamabad">伊斯兰堡</string>
    <string name="Lahore">拉合尔</string>
    <string name="Mumbai">孟买</string>
    <string name="NewDelhi">新德里</string>
    <string name="Kolkata">加尔各答</string>
    <string name="Kathmandu">加德满都</string>
    <string name="Dhaka">达卡</string>
    <string name="Yangon">仰光</string>
    <string name="Bangkok">曼谷</string>
    <string name="Hanoi">河内</string>
    <string name="Jakarta">雅加达</string>
    <string name="KualaLumpur">吉隆坡</string>
    <string name="Singapore">新加坡</string>
    <string name="HongKong">中国香港</string>
    <string name="Perth">佩思</string>
    <string name="Beijing">北京</string>
    <string name="Manila">马尼拉</string>
    <string name="Shanghai">上海</string>
    <string name="Taipei">中国台北</string>
    <string name="Seoul">汉城</string>
    <string name="Tokyo">东京</string>
    <string name="Darwin">达尔文</string>
    <string name="Adelaide">阿德莱德</string>
    <string name="Brisbane">布里斯班</string>
    <string name="Melbourne">墨尔本</string>
    <string name="Canberra">堪培拉</string>
    <string name="Sydney">悉尼</string>
    <string name="Vladivostok">海参崴</string>
    <string name="Suva">苏瓦</string>
    <string name="Wellington">惠灵顿</string>
    <string name="Chatham">查塔姆</string>
    <string name="Kamchatka">堪察加半岛</string>
    <string name="Anadyr">阿纳德尔</string>
    <string name="Honolulu">檀香山</string>
    <string name="Kiritimati">圣诞岛</string>
    <string name="Anchorage">安克雷奇</string>
    <string name="Vancouver">温哥华</string>
    <string name="SanFrancisco">旧金山</string>
    <string name="Seattle">西雅图</string>
    <string name="LosAngeles">洛杉矶</string>
    <string name="Phoenix">凤凰城</string>
    <string name="Aklavik">阿克拉维克</string>
    <string name="Edmonton">埃得蒙顿</string>
    <string name="Denver">丹佛</string>
    <string name="Guatemala">危地马拉</string>
    <string name="SanSalvador">圣萨尔瓦多</string>
    <string name="Tegucigalpa">特古西加尔巴</string>
    <string name="Managua">马那瓜</string>
    <string name="MexicoCity">墨西哥城</string>
    <string name="Winnipeg">温尼伯</string>
    <string name="Houston">休斯敦</string>
    <string name="Minneapolis">明尼阿波利斯</string>
    <string name="StPaul">圣保罗</string>
    <string name="NewOrleans">新奥尔良</string>
    <string name="Chicago">芝加哥</string>
    <string name="Montgomery">蒙哥马利</string>
    <string name="Indianapolis">印第安纳波利斯</string>
    <string name="Lima">利马</string>
    <string name="Kingston">金斯敦</string>
    <string name="Bogota">波哥大</string>
    <string name="SantoDomingo">圣多明各</string>
    <string name="LaPaz">拉巴斯</string>
    <string name="Caracas">加拉加斯</string>
    <string name="SanJuan">圣胡安</string>
    <string name="Havana">哈瓦那</string>
    <string name="Atlanta">亚特兰大</string>
    <string name="Detroit">底特律</string>
    <string name="WashingtonDC">华盛顿</string>
    <string name="Philadelphia">费城</string>
    <string name="Toronto">多伦多</string>
    <string name="Ottawa">渥太华</string>
    <string name="Nassau">拿骚</string>
    <string name="NewYork">纽约</string>
    <string name="Montreal">蒙特利尔</string>
    <string name="Boston">波士顿</string>
    <string name="Halifax">哈利法克斯</string>
    <string name="Santiago">圣地亚哥</string>
    <string name="Asuncion">亚松森</string>
    <string name="StJohns">圣约翰</string>
    <string name="BuenosAires">布宜诺斯艾利斯</string>
    <string name="Montevideo">蒙得维的亚</string>
    <string name="Brasilia">巴西利亚</string>
    <string name="SaoPaulo">圣保罗</string>
    <string name="RiodeJaneiro">里约热内卢</string>

    <!-- about timer -->
    <string name="text_hour">小时</string>
    <string name="text_minute">分钟</string>
    <string name="text_hour_2">时</string>
     <string name="text_minute_2">分</string>
    <string name="selectsound_title">计时结束时，启用</string>
    <string name="selectsound_btn">计时结束时，启用：</string>
    <string name="selectsound_cancle">取消 </string>
    <string name="selectsound_ok">设定</string>
    <string name="timer_start">启动</string>
    <string name="timer_stop">取消</string>
    <string name="timer_setting_sleep">/easyandroid/睡眠模式.mp3</string>
    <string name="timer_setting_vibrate">振动</string>
    <string name="timer_null_ringtone">无法获取系统铃声</string>
    <string name="timer_over">计时结束</string>

</resources>